--- a/frontend/src/components/styles/MainGraph.scss
+++ b/frontend/src/components/styles/MainGraph.scss
@@ -46,7 +46,9 @@ g.nodegroup {
       cursor: pointer;
     }
     circle.hovered {
-      stroke: darkgray!important;
+      // stroke: darkgray!important;
+      -webkit-filter: drop-shadow( -10px 10px 2px rgba(0, 0, 0, .7));
+      filter: drop-shadow( -10px 10px 2px rgba(0, 0, 0, .7));
       stroke-width: 8px;
     }
     text {
