Migrated to new changes done during paper writing and finished static viz [WIP]

--- a/frontend/src/components/styles/MainGraph.scss
+++ b/frontend/src/components/styles/MainGraph.scss
@@ -12,7 +12,7 @@ g.linkgroup {
     stroke: black;
   }
 
-  g.hovered path {
+  g path:hover {
     transition: opacity 0s, stroke-width 0s !important;
     stroke-width: 3px !important;
     opacity: 0.8 !important;
